--- a/index.html
+++ b/index.html
@@ -35,31 +35,27 @@
                 gl_FragColor = vec4(vec3(strength),1.0);
             }
         </script>
-    <!-- POINT SHADER MATERIAL ENDS -->
 
     <!-- USER CURSOR SHADER MATERIAL -->
         <script id="cursorVertexShader" type="x-shader/x-vertex">
             void main(){
                 gl_Position = projectionMatrix * viewMatrix * modelMatrix * vec4(position,1.0);
-                gl_PointSize = 7.0;
+                gl_PointSize = 250.0;
             }
         </script>
 
         <script id="cursorFragmentShader" type="x-shader/x-vertex">
-            uniform vec3 uColor;
+            uniform float uTime;
+            uniform vec3 uColor1;
+            uniform vec3 uColor2;
             void main(){
                 float strength = distance(gl_PointCoord,vec2(0.5)); 
-                strength = step(0.5,strength);
                 strength = 1.0 - strength;
-                vec3 color = vec3(strength);
-                if(strength == 1.0){
-                    color = uColor;
-                }
-                
-                gl_FragColor = vec4(color,1.0);
+                strength = pow(strength,10.0);
+                vec3 color = mix(uColor1,uColor2,uTime);
+                gl_FragColor = vec4(color,strength);
             }
         </script>
-    <!-- USER CURSOR SHADER MATERIAL ENDS -->
 
     <script defer type="module" src="index.js"></script>
 </body>
